--- a/Guided example/Kaggle mock submission - Steps to follow.ipynb
+++ b/Guided example/Kaggle mock submission - Steps to follow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,36 +67,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>carat</th>\n",
+       "      <th>cut</th>\n",
+       "      <th>color</th>\n",
+       "      <th>clarity</th>\n",
+       "      <th>depth</th>\n",
+       "      <th>table</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1.02</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>D</td>\n",
+       "      <td>VS2</td>\n",
+       "      <td>63.2</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>6.36</td>\n",
+       "      <td>6.40</td>\n",
+       "      <td>4.03</td>\n",
+       "      <td>8.928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>Very Good</td>\n",
+       "      <td>H</td>\n",
+       "      <td>VVS2</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>4.54</td>\n",
+       "      <td>4.57</td>\n",
+       "      <td>2.77</td>\n",
+       "      <td>6.477</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>Premium</td>\n",
+       "      <td>H</td>\n",
+       "      <td>VVS1</td>\n",
+       "      <td>60.5</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>4.43</td>\n",
+       "      <td>4.40</td>\n",
+       "      <td>2.67</td>\n",
+       "      <td>6.810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>E</td>\n",
+       "      <td>VS1</td>\n",
+       "      <td>61.4</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>4.66</td>\n",
+       "      <td>4.69</td>\n",
+       "      <td>2.87</td>\n",
+       "      <td>6.824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1.64</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>G</td>\n",
+       "      <td>VVS2</td>\n",
+       "      <td>61.8</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>7.59</td>\n",
+       "      <td>7.60</td>\n",
+       "      <td>4.69</td>\n",
+       "      <td>9.776</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  carat        cut color clarity  depth  table     x     y     z  price\n",
+       "0   0   1.02       Good     D     VS2   63.2   58.0  6.36  6.40  4.03  8.928\n",
+       "1   1   0.35  Very Good     H    VVS2   61.0   57.0  4.54  4.57  2.77  6.477\n",
+       "2   2   0.31    Premium     H    VVS1   60.5   58.0  4.43  4.40  2.67  6.810\n",
+       "3   3   0.38      Ideal     E     VS1   61.4   56.0  4.66  4.69  2.87  6.824\n",
+       "4   4   1.64      Ideal     G    VVS2   61.8   56.0  7.59  7.60  4.69  9.776"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_train.sample()"
+    "df_train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>carat</th>\n",
+       "      <th>cut</th>\n",
+       "      <th>color</th>\n",
+       "      <th>clarity</th>\n",
+       "      <th>depth</th>\n",
+       "      <th>table</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10568</th>\n",
+       "      <td>10568</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>Very Good</td>\n",
+       "      <td>F</td>\n",
+       "      <td>VVS1</td>\n",
+       "      <td>62.1</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>4.84</td>\n",
+       "      <td>4.92</td>\n",
+       "      <td>3.03</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          id  carat        cut color clarity  depth  table     x     y     z\n",
+       "10568  10568   0.44  Very Good     F    VVS1   62.1   60.0  4.84  4.92  3.03"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_test.sample()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(40455, 11)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_train.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13485, 10)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_test.shape"
    ]
@@ -357,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "nbTranslate": {
    "displayLangs": [
